[tool.poetry]
name = "classification_amazon_sales"
version = "0.1.0"
description = ""
authors = ["Nicolas Nuñez Manzano <nico.nm30@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.0.1"
tensorflow = "^2.12.0"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
